--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://larissaperinoto.github.io/trivia",
+  "homepage": "https://trivia-xi-seven.vercel.app/",
   "name": "trivia",
   "version": "0.1.0",
   "private": true,
